# HSE

./: .gitignore  .gitmodules
AMLA/HW1/: calculations.ipynb
Algebra-Practice/: Alg_10_2021_22_complex_num_tasks.ipynb  Alg_11_2020_vect_task.ipynb  Alg_12_2021_22_lin_op_tasks.ipynb  Alg_13_2020_quadr_form_tasks.ipynb  Alg_14_2021_22_ellipse_task.ipynb  Alg_3_2021_22_tasks.ipynb  Alg_4_2020_tasks.ipynb  Alg_6_2021_22_tasks.ipynb  Alg_7_2021_22_tasks.ipynb  Alg_8_2021_22_tasks.ipynb
Applied-Algebra/HW1/: calculations.ipynb
Applied-Algebra/HW2/: calculatios.ipynb  solution.ipynb
Applied-Algebra/HW_Iterations/: solution.ipynb
Applied-Data-Science/HW1/: .gitignore  HW1.ipynb
Applied-Data-Science/HW2/: HW2_audio.ipynb
Applied-Data-Science/HW3/: .gitignore  HW3_ts.ipynb
Applied-Data-Science/HW4/: HW4-recommendations.ipynb
Calculus-Practice/: Calculus_math_11_tasks.ipynb  Calculus_math_13_tasks.ipynb  Calculus_math_15_tasks.ipynb  Calculus_math_18_tasks.ipynb  Calculus_math_2_tasks.ipynb  Calculus_math_3_tasks.ipynb  Calculus_math_4_tasks.ipynb  Calculus_math_5_tasks.ipynb  Calculus_math_6_tasks.ipynb  Calculus_math_8_tasks.ipynb  Calculus_math_9_tasks.ipynb
Computer-System-Architecture/IDZ3/: .gitattributes  package.json
Computer-System-Architecture/hw4/: 1.asm  (+3 more)
Computer-Vision-Technologies/Lect/cpp/jit/: CMakeLists.txt  main.cpp  run.sh
Computer-Vision-Technologies/Lect/cpp/onnx/: CMakeLists.txt  main.cpp  run.sh
CourseProject/: .gitignore  12-exp-dimreduct-algos.ipynb  16-exp-feature-selection.ipynb  18-exp-select-features.ipynb  20-exp-select-features-by-function.ipynb  21-exp-full-flow.ipynb  22-exp-full-flow-extended.ipynb  23-exp-reduced-flow-analysis.ipynb  23-exp-reduced-flow.ipynb  24-exp-shuffled-epochs.ipynb  24-exp-shuffled-epochs.py  24-exp-shuffled-flow-analysis.ipynb  9-exp-final.ipynb  article.ipynb  exp1.ipynb  exp_final.ipynb  exp_final2.ipynb  exp_iv.ipynb  exp_pca.ipynb  exp_sep.ipynb  exp_sep2.ipynb  exp_separate.ipynb  pearson_dissim.ipynb  report.ipynb  reproduction.ipynb  sda.ipynb  test.ipynb
Data-Science-Intro/: hw03_EDA.ipynb  hw06_texts.ipynb  hw07_trees_rf.ipynb
Diploma/: .gitignore  README.md  pyproject.toml
Introduction-To-Software-Engineering/: Абрамов_Александр_БПИ214.pod
Practicum-Algebra/: Alg_15_2021_22_hyp_tasks (1).ipynb  Alg_15_2021_22_hyp_tasks.ipynb  Alg_16_2021_22_par_task.ipynb  Alg_17_2021_22_surf2_tasks.ipynb  Alg_1_2021_22_tasks.ipynb  Alg_2_2021_22_tasks.ipynb  Alg_5_2021_22_tasks.ipynb  Alg_9_2021_22_tasks.ipynb
Practicum-Calculus/: Calculus_math_12_tasks.ipynb  Calculus_math_14_tasks.ipynb  Calculus_math_16_tasks.ipynb  Calculus_math_17_tasks.ipynb  Calculus_math_1_tasks.ipynb  Calculus_math_7_tasks.ipynb  Exam.ipynb
Process-Mining/: 6_3_has_unsuppressable_errors.ipynb  6_4_report_diagnostics.ipynb
intro-data-science/: hw01_numpy.ipynb  hw02_pandas.ipynb  hw04_knn_linreg.ipynb  hw05_gd.ipynb
(+277580 files in other folders)
