cmake_minimum_required(VERSION 3.28 FATAL_ERROR)
project(jit)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -O2")
if(NOT APPLE)
    set(CMAKE_CUDA_COMPILER /usr/local/cuda/bin/nvcc)
    add_compile_definitions(WITH_CUDA PROFILE)
endif()

find_package(Torch REQUIRED)
find_package(OpenCV REQUIRED)
find_package(PillowResize REQUIRED)

add_executable(main main.cpp ../get_input.cpp)
include_directories(main "../")
target_link_libraries(main torch)
target_link_libraries(main PillowResize)
target_link_libraries(main ${OpenCV_LIBS})